# kube-controller-foo

./: Cargo.toml  README.md  test.yaml
src/: crdgen.rs  foo.rs  lib.rs  main.rs
