[package]
name = "kube-controller-foo"
version = "0.1.0"
edition = "2021"
default-run = "kube-controller-foo"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
futures = "0.3.30"
k8s-openapi = { version = "0.21.0", features = ["latest"] }
kube = { version = "0.88.1", features = ["derive", "runtime", "client"] }
schemars = "0.8.16"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
